# opensearch-protos

./: .gitignore  README.md  modified.proto  opensearch-openapi.yaml  package-lock.json  package.json
.github/workflows/: convert-proto.yml
protos/: .bazelrc  BUILD.bazel  WORKSPACE  document_service.proto  protobuf_extra_deps.bzl
protos/schemas/: BUILD.bazel  common.proto  document.proto
spec/proto/.openapi-generator/: FILES
spec/proto/models/: aggregated_models.proto
spec/proto/services/: default_service.proto
spec/protos/: README.md
spec/protos/.openapi-generator/: FILES
spec/protos/models/: aggregated_models.proto
spec/protos/opensearch.api/: default_service.proto
spec/protos/opensearch.model/: aggregated_models.proto
spec/protos/services/: default_service.proto
tools/go/: generate_go.sh
tools/java/: package_proto_jar.sh
tools/proto-convert/src/: PostProcessing.ts  PreProcessing.ts  ProtoFieldNumberMatcher.ts  ProtoPreprocessing.ts  protobuf-generator-config.yaml
tools/proto-convert/src/config/: protobuf-generator-config.yaml
tools/proto-convert/src/config/protobuf-schema-template/: api.mustache  model.mustache
tools/proto/src/: ProtoPreprocessing.ts  Sanitizer.ts  protobuf-generator-config.yaml
tools/proto/src/utils/: helper.ts
tools/python/: generate_python.sh  requirements.txt
